force-app/main/default/objects/Plan_Protocol__c/Plan_Protocol__c.object-meta.xml
<CustomObject>
    <label>Plan Protocol</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Plan Protocol Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Protocols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>