force-app/main/default/objects/Plan_Protocol__c/fields/Bundle_Entry__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Entry</label>
    <referenceTo>Bundle_Entry__c</referenceTo>
    <relationshipLabel>Plan Protocols</relationshipLabel>
    <relationshipName>Plan_Protocols</relationshipName>
    <type>Lookup</type>
</CustomField>