force-app/main/default/objects/Plan_Protocol__c/fields/IsRemoved__c.field-meta.xml
<CustomField>
    <fullName>IsRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to Remove value from Treatment Plan</description>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>