force-app/main/default/objects/Plan_Protocol__c/fields/New_Protocol__c.field-meta.xml
<CustomField>
    <fullName>New_Protocol__c</fullName>
    <formula>(NOW() - CreatedDate )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Protocol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>