force-app/main/default/objects/Plan_Protocol__c/fields/Notes_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Notes_Last_Modified_Date__c</fullName>
    <label>Notes Last Modified Date</label>
    <type>Date</type>
</CustomField>