force-app/main/default/objects/Plan_Protocol__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Plan Protocols</relationshipLabel>
    <relationshipName>Plan_Protocols</relationshipName>
    <type>Lookup</type>
</CustomField>