force-app/main/default/objects/Plan_Protocol__c/fields/Protocol_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Box_Link__c</fullName>
    <label>Protocol Box Link</label>
    <type>Url</type>
</CustomField>