force-app/main/default/objects/Plan_Protocol__c/fields/Protocol_Description__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Description__c</fullName>
    <label>Protocol Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>