force-app/main/default/objects/Plan_Protocol__c/fields/Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Name__c</fullName>
    <formula>Protocol__r.Name</formula>
    <label>Protocol Name</label>
    <type>Text</type>
</CustomField>